feat(demo) updated data preprocessing check

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "85603399",
+   "metadata": {},
+   "source": [
+    "Instantiate the RAG pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce4ca871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "print(os.environ.get(\"HUGGINGFACE_HUB_TOKEN\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4036d9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_dir = \"data/processed\"  # replace with your actual path\n",
+    "if os.path.exists(processed_dir) and os.path.isdir(processed_dir):\n",
+    "    print(f\"✅ Preprocessing already done. Directory exists: {processed_dir}\")\n",
+    "else:\n",
+    "    print(f\"⚠️ Preprocessing not found. Directory does not exist: {processed_dir}\")\n",
+    "    print(\"Running preprocessing script...\")\n",
+    "    !python scripts/run_preprocessing.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1e722ea6",
@@ -8,10 +43,16 @@
    "outputs": [],
    "source": [
     "from src.rag_pipeline import RAGPipeline\n",
-    "import os\n",
-    "print(os.environ.get(\"HUGGINGFACE_HUB_TOKEN\"))\n",
-    "# Initialize pipeline with default retriever and generator\n",
+    "\n",
     "rag = RAGPipeline(max_context_tokens=1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb61af4a",
+   "metadata": {},
+   "source": [
+    "Run a query"
    ]
   },
   {
@@ -27,6 +68,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d18ed38",
+   "metadata": {},
+   "source": [
+    "Streaming mode"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ffc3db36",
@@ -36,6 +85,14 @@
     "stream = rag.process_query(\"Show me comedies\", top_k=5, stream=True)\n",
     "for token in stream:\n",
     "    print(token, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc28132b",
+   "metadata": {},
+   "source": [
+    "Reset conversation"
    ]
   },
   {
