refactor(data) remove unnecessary folder

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "85603399",
+   "id": "afbd7d68",
    "metadata": {},
    "source": [
-    "Instantiate the RAG pipeline"
+    "Check access key"
    ]
   },
   {
@@ -17,6 +17,14 @@
    "source": [
     "import os\n",
     "print(os.environ.get(\"HUGGINGFACE_HUB_TOKEN\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd622d9",
+   "metadata": {},
+   "source": [
+    "Preprocess dataset"
    ]
   },
   {
@@ -33,6 +41,14 @@
     "    print(f\"⚠️ Preprocessing not found. Directory does not exist: {processed_dir}\")\n",
     "    print(\"Running preprocessing script...\")\n",
     "    !python scripts/run_preprocessing.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85603399",
+   "metadata": {},
+   "source": [
+    "Instantiate the RAG pipeline"
    ]
   },
   {
