refactor(demo) change text size

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -5,7 +5,7 @@
    "id": "afbd7d68",
    "metadata": {},
    "source": [
-    "Check access key"
+    "### Check access key"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "id": "4cd622d9",
    "metadata": {},
    "source": [
-    "Preprocess dataset"
+    "### Preprocess dataset"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "id": "fb61af4a",
    "metadata": {},
    "source": [
-    "Run a query"
+    "### Run a query"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "id": "6d18ed38",
    "metadata": {},
    "source": [
-    "Streaming mode"
+    "### Streaming mode"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "id": "dc28132b",
    "metadata": {},
    "source": [
-    "Reset conversation"
+    "### Reset conversation"
    ]
   },
   {
